# TV

./: README.md  eventi_dlhd.m3u  eventi_dlhd.xml  lista.m3u  pyproject.toml  requirements-lista.txt  sportsonline.m3u  vavoo.m3u  world.m3u
.github/workflows/: lista.yml
scripts/: .env  film_cache.json  lista.py  serie.py  serie_cache.json
