[project]
name = "tv"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "fuzzywuzzy>=0.18.0",
    "lxml>=6.0.2",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-levenshtein>=0.27.3",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
]
